--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <body>
         <header>
             <nav>
+                <div id="hamburger">
+                    <div id="first-bar"></div>
+                    <div id="second-bar"></div>
+                    <div id="third-bar"></div>
+                </div>
                 <a id="logo-alexandre" href="index.html">alexandre<br>ehrhard</a>
                 <ul>
                     <li>
