--- a/contact.html
+++ b/contact.html
@@ -16,15 +16,20 @@
     <body>
         <header>
             <nav>
+                <div id="hamburger">
+                    <div id="first-bar"></div>
+                    <div id="second-bar"></div>
+                    <div id="third-bar"></div>
+                </div>
                 <a id="logo-alexandre" href="index.html">alexandre<br>ehrhard</a>
                 <ul>
-                    <li class="allow-mobile-view">
+                    <li>
                         <a href="index.html">accueil</a>
                     </li>
                     <li>
                         <a href="index.html#projets-wrapper">mes projets</a>
                     </li>
-                    <li>
+                    <li class="allow-mobile-view">
                         <a class="cta-important" href="contact.html">me contacter</a>
                     </li>
                 </ul>
@@ -32,6 +37,7 @@
         </header>
         
         <div class="content-wrapper">
+            <div id="blur"></div>
             <!-- Me suivre -->
             <h1>me suivre</h1>
             <div class="container social-media-wrapper">
@@ -69,5 +75,7 @@
                 <p><span class="bi bi-telephone-fill"></span> 06 76 97 52 66</p>
             </div>
         </div>
+
+        <script src="App.js"></script>
     </body>
 </html>
