--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </header>
         
         <div class="content-wrapper">
+            <div id="blur"></div>
             <div class="container">
                 <p>
                     Bonjour, je m’appelle Alexandre EHRHARD, j'ai 18 ans. Je suis actuellement en Terminale
@@ -52,6 +53,8 @@
                 <div id="timeline"></div>
             </div>
         </div>
+        
         <script src="App.js"></script>
+        <script src="Projects.js"></script>
     </body>
 </html>
