Add description to Alexflix

--- a/contact.html
+++ b/contact.html
@@ -24,13 +24,13 @@
                 <a id="logo-alexandre" href="index.html">alexandre<br>ehrhard</a>
                 <ul>
                     <li>
-                        <a href="index.html">accueil</a>
+                        <a class="button-header" href="index.html">accueil</a>
                     </li>
                     <li>
-                        <a href="index.html#projets-wrapper">mes projets</a>
+                        <a class="button-header" href="index.html#projets-wrapper">mes projets</a>
                     </li>
                     <li class="allow-mobile-view">
-                        <a class="cta-important" href="contact.html">me contacter</a>
+                        <a class="cta-important button-header" href="contact.html">me contacter</a>
                     </li>
                 </ul>
             </nav>
@@ -41,8 +41,15 @@
             <!-- Me suivre -->
             <h1>me suivre</h1>
             <div class="container social-media-wrapper">
-                
                 <!-- GitHub -->
+                <div class="card_Réseaux_sociaux">
+                    <a href="https://github.com/6Alexandre7" target="_blank">
+                        <img src="Images/GitHub.svg" alt="Logo GitHub" class="image_réseaux_sociaux">
+                        <p></p>
+                        GitHub
+                    </a>
+                </div>
+                <!-- LinkedIn -->
                 <div class="card_Réseaux_sociaux">
                     <a href="https://www.linkedin.com/in/alexandre-ehrhard/" target="_blank">
                         <img src="Images/LinkedIn.png" alt="Logo LinkedIn" class="image_réseaux_sociaux">
@@ -50,12 +57,12 @@
                         LinkedIn
                     </a>
                 </div>
-                <!-- GitHub -->
+                <!-- Fiverr -->
                 <div class="card_Réseaux_sociaux">
-                    <a href="https://github.com/6Alexandre7" target="_blank">
-                        <img src="Images/GitHub.svg" alt="Logo GitHub" class="image_réseaux_sociaux">
+                    <a href="https://fr.fiverr.com/mralexandre67" target="_blank">
+                        <img src="Images/Fiverr.png" alt="Logo LinkedIn" class="image_réseaux_sociaux">
                         <p></p>
-                        GitHub
+                        Fiverr
                     </a>
                 </div>
                 <!-- Itch.Io -->
@@ -71,7 +78,7 @@
             <!-- Me contacter -->
             <h1>me contacter</h1>
             <div class="container">
-                <p><span class="bi bi-envelope-fill"></span> alexandre.eh67@gmail.com</p>
+                <a href="mailto:alexandre.eh67@gmail.com" ><span class="bi bi-envelope-fill"></span> alexandre.eh67@gmail.com</a>
                 <p><span class="bi bi-telephone-fill"></span> 06 76 97 52 66</p>
             </div>
         </div>
