Ajout de projets + small fix

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset='utf-8'/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Alexandre Ehrhard</title> <!-- Titre de l'onglet -->
-        <link rel="icon" type="image/png" href="Images/Logo.png"/> <!-- Icone de l'onglet -->
+        <!-- Titre de l'onglet -->
+        <title>Alexandre Ehrhard</title>
+        <!-- Icone de l'onglet -->
+        <link rel="icon" type="image/png" href="Images/Logo.png"/> 
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css"/>
@@ -23,7 +25,7 @@
                         <a href="index.html">accueil</a>
                     </li>
                     <li>
-                        <a href="index.html#projets-wrapper">mes projets</a>
+                        <a id="mes-projets-button" href="index.html#projets-wrapper">mes projets</a>
                     </li>
                     <li class="allow-mobile-view">
                         <a class="cta-important" href="contact.html">me contacter</a>
@@ -36,16 +38,16 @@
             <div id="blur"></div>
             <div class="container">
                 <p>
-                    Bonjour, je m’appelle Alexandre EHRHARD, j'ai 18 ans. Je suis actuellement en Terminale
-                    générale au lycée Marcel Rudloff à Strasbourg dans le but d'obtenir très prochainement mon Baccalauréat. 
-                    Passionné par le développement Web et la création numérique, j'aime apprendre, expérimenter, découvrir 
-                    et créer des choses c’est pourquoi j’ai choisi la spécialité Numérique 
-                    et Sciences Informatiques. 
+                    Bonjour, je m’appelle Alexandre EHRHARD, j'ai 18 ans. Je suis actuellement en première année de 
+                    Licence Mathématiques - Informatique à l'université de Strasbourg après avoir obtenu un Bac général 
+                    options mathématiques et informatique (NSI) mention très bien avec les félicitations du jury.
+                    Je suis passionné par le développement Web et la création numérique, j'aime apprendre, expérimenter, 
+                    découvrir et créer des choses. 
                 </p>
                 <p>
                     Ce portfolio contient toutes mes créations (jeux, logiciels et sites Web) que j'ai 
                     créé ces dernières années en utilisant plusieurs outils. Ces dernières m’ont 
-                    permis de gagner en rigueur ou d’être plus efficace en équipe.
+                    permis de gagner en rigueur ou d'apprendre à travailler en équipe.
                 </p>
             </div>
             <div id="projets-wrapper">
@@ -53,7 +55,6 @@
                 <div id="timeline"></div>
             </div>
         </div>
-        
         <script src="App.js"></script>
         <script src="Projects.js"></script>
     </body>
