--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
             <h1>me contacter</h1>
             <div class="container">
                 <a href="mailto:alexandre.eh67@gmail.com" ><span class="bi bi-envelope-fill"></span> alexandre.eh67@gmail.com</a>
-                <p><span class="bi bi-telephone-fill"></span> 06 76 97 52 66</p>
+                <a href="tel:0676975266" ><span class="bi bi bi-telephone-fill"></span> 06 76 97 52 66</a>
             </div>
         </div>
 
