Add projects + fix contact

--- a/contact.html
+++ b/contact.html
@@ -45,32 +45,29 @@
                 <div class="card_Réseaux_sociaux">
                     <a href="https://github.com/6Alexandre7" target="_blank">
                         <img src="Images/GitHub.svg" alt="Logo GitHub" class="image_réseaux_sociaux">
-                        <p></p>
-                        GitHub
+                        <p>GitHub</p>
                     </a>
                 </div>
                 <!-- LinkedIn -->
                 <div class="card_Réseaux_sociaux">
                     <a href="https://www.linkedin.com/in/alexandre-ehrhard/" target="_blank">
                         <img src="Images/LinkedIn.png" alt="Logo LinkedIn" class="image_réseaux_sociaux">
-                        <p></p>
-                        LinkedIn
+                        <p>LinkedIn</p>
                     </a>
                 </div>
                 <!-- Fiverr -->
-                <div class="card_Réseaux_sociaux">
+                <!-- <div class="card_Réseaux_sociaux">
                     <a href="https://fr.fiverr.com/mralexandre67" target="_blank">
-                        <img src="Images/Fiverr.png" alt="Logo LinkedIn" class="image_réseaux_sociaux">
+                        <img src="Images/Fiverr.png" alt="Logo Fiverr" class="image_réseaux_sociaux">
                         <p></p>
                         Fiverr
                     </a>
-                </div>
+                </div> -->
                 <!-- Itch.Io -->
                 <div class="card_Réseaux_sociaux">
                     <a href="https://mr-alexandre.itch.io/" target="_blank">
                         <img src="Images/Itch_io.png" alt="Logo Itch.Io" class="image_réseaux_sociaux">
-                        <p></p>
-                        Itch.io
+                        <p>Itch.io</p>
                     </a>
                 </div>
             </div>
