--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset='utf-8'/>
+        <meta charset='utf-8'>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Titre de l'onglet -->
         <title>Alexandre Ehrhard</title>
         <!-- Icone de l'onglet -->
-        <link rel="icon" type="image/png" href="Images/Logo.png"/> 
+        <link rel="icon" type="image/png" href="Images/Logo.png"> 
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
@@ -38,8 +38,9 @@
             <div id="blur"></div>
             <div class="container">
                 <p>
-                    Bonjour, je m’appelle Alexandre EHRHARD, j'ai 18 ans. Je suis actuellement en première année de 
-                    Licence Mathématiques - Informatique à l'université de Strasbourg après avoir obtenu un Bac général 
+                    Bonjour, je m’appelle Alexandre EHRHARD, j'ai 19 ans. 
+                    Je suis étudiant en première année de Cursus Master en Ingénierie en Informatique 
+                    parcours Informatique, Systèmes et Réseaux à l’Université de Strasbourg après avoir obtenu un Bac général 
                     options mathématiques et informatique (NSI) mention très bien avec les félicitations du jury.
                     Je suis passionné par le développement Web et la création numérique, j'aime apprendre, expérimenter, 
                     découvrir et créer des choses. 
